# niwrap

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  build.py  index.html  niwrap.html  styx.toml
python/: README.md  pyproject.toml
python/niwrap/afni/: v_3d_automask.py  v_3d_bandpass.py  v_3d_blur_to_fwhm.py  v_3d_despike.py  v_3d_detrend.py  v_3d_ecm.py  v_3d_lfcd.py  v_3d_roistats.py  v_3d_skull_strip.py  v_3d_tcat.py  v_3d_tcorr1_d.py  v_3d_tcorrelate.py  v_3d_tproject.py  v_3d_tshift.py  v_3d_tstat.py  v_3d_unifize.py  v_3dcalc.py  v_3dmask_tool.py  v_3dmaskave.py  v_3drefit.py  v_3dresample.py  v_3dvolreg.py
python/niwrap/ants/: atropos.py  brain_extraction_sh.py  denoise_image.py  multiply_images.py  n4_bias_field_correction.py  registration.py
python/niwrap/freesurfer/: apply_vol_transform.py  recon_all.py
python/niwrap/fsl/: apply_warp.py  bet.py  epi_reg.py  fast.py  flameo.py  fnirt.py  fugue.py  glm.py  maths.py  mcflirt.py  overlay.py  prepare_fieldmap.py  randomise.py  roi.py  slice.py  slicer.py  split.py  swap_dimensions.py
python/niwrap/workbench/: add_to_spec_file.py  annotation_resample.py  backend_average_dense_roi.py  border_export_color_table.py  border_length.py  border_merge.py  border_resample.py  border_to_rois.py  border_to_vertices.py  cifti_average.py  cifti_convert.py  cifti_correlation.py  cifti_correlation_gradient.py  cifti_create_dense_from_template.py  cifti_create_dense_scalar.py  cifti_create_dense_timeseries.py  cifti_create_label.py  cifti_create_scalar_series.py  cifti_dilate.py  (+123 more)
python/nopype/: styxdefs.py
(+7121 files in other folders)
