[tool.poetry]
name = "niwrap"
version = "0.3.3"
description = "Neuroimaging Python wrappers."
authors = ["Child Mind Institute <cmi-dair@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "niwrap", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
styxdefs = "^0.4.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
